@@ -28,6 +28,7 @@
 - FIX: Parsing ivy file fails in IvyDE while it succeeds in Ant (IVYDE-35)
 - FIX: Sources attach but Javadocs don't (IVYDE-166)
 - FIX: Branch in repository pattern and defaultBranch (IVYDE-168)
+- FIX: The resolve in workspace is being evicted by transitive dependencies (IVYDE-169)
 
   version 2.0.0 beta1
 ==========================
